# pySmartHashtag

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  response-GET-2b0327193c85143fe472e00c7b7a583e.json  response-GET-50aca0223d248257b5e30217cbc8efb6.json  response-GET-831121c99fdcb07ceca4fcce99ebc97a.json  response-GET-9acb190be4613bd60a99fdb37ced5970.json  response-GET-be3360fc2bc0e58e62ea60bb83c061f8.json  response-PUT-50741155f9e4552907530a32eefbed06.json  run.sh  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: python-package.yml  python-publish.yml
pysmarthashtag/: __init__.py  account.py  cli.py  const.py  models.py
pysmarthashtag/api/: __init__.py  authentication.py  client.py  log_sanitizer.py  ssl_context.py  utils.py
pysmarthashtag/control/: charging.py  climate.py
pysmarthashtag/tests/: __init__.py  common.py  conftest.py  test_account.py  test_actions.py  test_authentication.py  test_charging.py  test_dc_charging.py  test_endpoint_urls.py  test_global_auth.py  test_log_sanitizer.py  test_missing_fields.py  test_ssl_context.py
pysmarthashtag/tests/replys/: Human_and_vehicle_relationship_does_not_exist.json  api_access.json  auth_context.url  auth_intermediate.url  auth_result.url  charging_success.json  climate_success.json  global_login_result.json  global_refresh_result.json  global_vehicle_abilities.json  global_vehicle_details.json  global_vehicle_details2.json  global_vehicle_list.json  login_result.json  ota_response.json  soc_80.json  soc_90.json  token_expired.json  vehicle_info.json  vehicle_info2.json  vehicle_info_dc_charging.json  vehicle_response.json  vehicle_result.json
pysmarthashtag/vehicle/: __init__.py  basic_status.py  battery.py  climate.py  maintenance.py  position.py  running.py  safety.py  tires.py  trailer.py  vehicle.py
