[metadata]
name = pySmartHashtag
author = dasBasti
summary = Library to read data from the Smart web services
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
python_requires = >= 3.9
home_page = https://github.com/dasBasti/pySmartHashtag
project_urls =
    Bug Tracker = https://github.com/dasBasti/pySmartHashtag/issues
    Documentation = https://github.com/dasBasti/pySmartHashtag
    Source Code = https://github.com/dasBasti/pySmartHashtag
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    Smart
    Hashtag 1
    home automation

[files]
packages =
    pysmarthashtag

[entry_points]
console_scripts =
    pysmart = pysmarthashtag.cli:main
